--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,11 @@ jobs:
       run: |
         pip install -r requirements.txt
 
-    - name: Run tests directly
+    - name: Run tests on every platform
       run: |
         python tests/test_server.py
+
+    - name: Run tests only on Linux
+      if:  ${{ failure() && matrix.runner == 'ubuntu-latest' }}
+      run: |
         python tests/test_socket.py
